--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2072,7 +2072,7 @@
                 if (cubeValueLabel) cubeValueLabel.style.display = 'none';
             } else {
                 if (diceSection) diceSection.style.display = 'flex';
-                if (diceLabel) diceLabel.style.display = 'flex';
+                if (diceLabel) diceLabel.style.display = '';
                 if (diceDivider) diceDivider.style.display = 'flex';
                 if (cubeValueOptions) cubeValueOptions.style.display = 'flex';
                 if (cubeValueLabel) cubeValueLabel.style.display = '';
