--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -868,6 +868,8 @@
         }
 
         .turn-dice-labels {
+            display: flex;
+            gap: 2rem;
             flex-direction: row;
         }
 
@@ -1007,7 +1009,7 @@
         .turn-dice-wrapper {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 0.2rem;
         }
 
         .cube-selector-button {
