--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1305,7 +1305,7 @@
                 </div>
             </div>
             <div class="jb-wrap">
-                <div class="jb-title">Якоби / Бивер Макс куб</div>
+                <div class="jb-title">Якоби  Бивер Макс куб</div>
                 <div class="jacobi-beaver-block">
                     <div class="jb-row">
                         <button type="button" class="toggle-btn on" data-target="jacobi-select">1</button>
