--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1242,7 +1242,7 @@
 
         .cube-controls-labels label {
             color: white;
-            font-size: clamp(0.6rem, 1.2vw, 0.7rem);
+            font-size: clamp(0.5rem, 1.2vw, 0.7rem);
             text-align: left;
             flex-shrink: 0;
         }
