--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -872,7 +872,7 @@
 
         .turn-dice-labels {
             display: flex;
-            gap: 2rem;
+            gap: 1.5rem;
             flex-direction: row;
         }
 
@@ -885,6 +885,7 @@
         .turn-dice-content {
             display: flex;
             flex-direction: row;
+            gap: 0.5rem;
             align-items: center;
             justify-content: space-around;
         }
