--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,7 +48,7 @@
             padding: 5px;
             background: #333;
             color: white;
-            font-size: 12px;
+            font-size: 24px;
             font-family: monospace;
         }
         .xgid-close {
